<resources>
    <string name="app_name">Helmet Detector</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="predict">Detect Helmet</string>
    <string name="selected_image">Selected Image</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_image_selected">No image selected</string>
    <string name="error_api">API error: %1$s</string>
    <string name="upload_in_progress">Uploading image for detection...</string>
    <string name="select_image_method">Select image from</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="storage_permission_required">Storage permission is required</string>
</resources>
